--- a/package.json
+++ b/package.json
@@ -12,10 +12,6 @@
     "postinstall": "ng build --aot -prod",
     "start": "node server.js"
   },
-  "engines": {
-    "node": "6.11.5",
-    "npm": "3.10.10"
-  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.3",
@@ -34,9 +30,12 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "rxjs": "^5.5.2",
+    "typescript": "~2.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
+    "@angular/cli": "^1.6.2",
+    "@angular/compiler": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
@@ -54,5 +53,9 @@
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2"
+  },
+  "engines": {
+    "node": "6.11.5",
+    "npm": "3.10.10"
   }
 }
